<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.mpi.tla.flat</groupId>
	<artifactId>DoorKeeper</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.jopt-simple</groupId>
			<artifactId>jopt-simple</artifactId>
			<version>4.8</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>nl.mpi.tla</groupId>
			<artifactId>SaxonUtils</artifactId>
			<version>2.0-SNAPSHOT-RC5</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>janino</groupId>
			<artifactId>janino</artifactId>
			<version>2.5.10</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>fluent-hc</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.2</version>
		</dependency>
		<dependency>
			<groupId>net.sf.supercsv</groupId>
			<artifactId>super-csv</artifactId>
			<version>2.4.0</version>
		</dependency>
		<!-- validation -->
		<dependency>
			<groupId>nl.mpi.tla</groupId>
			<artifactId>SchemAnon</artifactId>
			<version>1.2.0-SNAPSHOT</version>
		</dependency>
		<!-- persistence -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>
		<!-- Java Client for fcrepo -->
		<dependency>
			<groupId>org.fcrepo.client</groupId>
			<artifactId>fcrepo-java-client</artifactId>
			<version>6.2.0</version>
		 <type>jar</type>
		</dependency>

		<!-- EASY Bag -->
		<dependency>
			<groupId>gov.loc</groupId>
			<artifactId>bagit</artifactId>
			<version>4.12.0</version>
		</dependency>
		<!-- ACL -->
		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
                <dependency>
                        <groupId>org.apache.jena</groupId>
                        <artifactId>jena-arq</artifactId>
                        <version>4.10.0</version>
                </dependency>
                <!-- https://www.mail-archive.com/dev@jena.apache.org/msg27968.html -->
                <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
                <dependency>
                    <groupId>commons-codec</groupId>
                    <artifactId>commons-codec</artifactId>
                    <version>1.15</version>
                </dependency>
		<!-- EPIC -->
		<dependency>
			<groupId>nl.knaw.meertens.pid</groupId>
			<artifactId>epicify-lib</artifactId>
			<version>2.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- MD5 (CreateFOX) -->
		<!-- https://mvnrepository.com/artifact/com.joyent.util/fast-md5 -->
		<dependency>
			<groupId>com.joyent.util</groupId>
			<artifactId>fast-md5</artifactId>
			<version>2.7.1</version>
		</dependency>
		<!-- mail -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
                <!-- DrupalSync -->
                <dependency>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                    <version>2.15.0</version>
                </dependency>
                <!-- https://mvnrepository.com/artifact/org.json/json -->
                <dependency>
                    <groupId>org.json</groupId>
                    <artifactId>json</artifactId>
                    <version>20240303</version>
                        <type>jar</type>
                </dependency>
	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<netbeans.hint.license>license</netbeans.hint.license>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<showWarnings>true</showWarnings>
					<compilerArgs>
						<arg>-Xlint:deprecation,rawtypes,unchecked</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>make-assembly doorkeeper</id>
						<!-- this is used for inheritance merges -->
						<phase>package</phase>
						<!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>nl.mpi.tla.flat.deposit.DoorKeeper</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>doorkeeper</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<attach>false</attach>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<argLine>-noverify</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>CLARIN</id>
			<url>https://nexus.clarin.eu/content/repositories/Clarin</url>
		</repository>
		<repository>
			<id>CLARIN-Snapshot</id>
			<name>CLARIN Snapshot Repository</name>
			<url>https://nexus.clarin.eu/content/repositories/clarin-snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
			<layout>default</layout>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<!-- needed for fast-md5 -->
		<repository>
			<id>Geomajas</id>
			<name>Geomajas repository</name>
			<url>http://maven.geomajas.org/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
</project>
